[tool.poetry]
name = "catlink"
version = "0.1.0"
description = ""
authors = ["Fuz2er <17903971+fuz2er@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
homeassistant = "^2024.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
